--- a/src/globals.css
+++ b/src/globals.css
@@ -58,3 +58,11 @@
     font-family: sans-serif;
   }
 }
+
+@layer utilities {
+  .bg-dotted-pattern {
+    background-color: #f3f4f6; /* bg-gray-100 */
+    background-image: radial-gradient(rgba(0, 0, 0, 0.04) 1px, transparent 1px);
+    background-size: 16px 16px;
+  }
+}
